remove the hack for chrome which causes compatibility issues

--- a/ui/common/css/component/_board.scss
+++ b/ui/common/css/component/_board.scss
@@ -15,7 +15,7 @@
   @extend %square;
 }
 
-.cg-wrap,
-.mini-game .cg-wrap {
-  display: table; // part of hack to round to full pixel size in chrome
-}
+// .cg-wrap,
+// .mini-game .cg-wrap {
+//   display: table; // part of hack to round to full pixel size in chrome
+// }
